Add inventory-service module